--- a/src/App.css
+++ b/src/App.css
@@ -51,6 +51,34 @@ header {
   align-items: center;
 }
 
+.search {
+  background-color: #f6f6f6;
+  border-bottom: 1px solid #EEE;
+  padding: 5px 15px;
+}
+.search--input {
+  background-color: #FFF;
+  height: 40px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  padding: 0 10px;
+}
+
+.search--input input {
+  flex: 1;
+  border: 0;
+  outline: 0;
+  background-color: transparent;
+  margin-left: 10px;
+}
+
+.chatlist {
+  flex: 1;
+  background-color: #FFF;
+  overflow-y: auto;
+}
+
 .contentarea {
 
 }
