--- a/src/App.css
+++ b/src/App.css
@@ -79,6 +79,21 @@ header {
   overflow-y: auto;
 }
 
+.chatlist::-webkit-scrollbar {
+  width: 6px;
+  height: 6px;
+}
+
+.chatlist::-webkit-scrollbar-thumb {
+  background-color: rgba(0, 0, 0, 0.2);
+  -webkit-border-radius: 1ex;
+  -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+}
+
+/* .chatlist::-webkit-scrollbar-corner {
+  background: #000;
+} */
+
 .contentarea {
 
 }
