--- a/src/components/ChatListItem/ChatListItem.css
+++ b/src/components/ChatListItem/ChatListItem.css
@@ -5,6 +5,10 @@
     height: 70px;
 }
 
+.chatListItem:hover {
+    background-color: #F5F5F5;
+}
+
 .chatListItem--avatar {
     height: 50px;
     width: 50px;
@@ -14,13 +18,21 @@
 
 .chatListItem--lines {
     flex: 1;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: center;
     border-bottom: 1px solid #EEE;
     padding-right: 5px;
     margin-left: 15px;
+
+    flex-wrap: wrap;
+    min-width: 0;
 }
+
+.chatListItem--lines ::-webkit-scrollbar {
+    display: none;
+  }
 
 .chatListItem--line {
     display: flex;
@@ -46,4 +58,9 @@
     width: 100%;
 }
 
-p {}
+.chatListItem--lastMsg p {
+    overflow-y: hidden;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    margin: 0;
+}
