--- a/src/components/ChatWindow/ChatWindow.css
+++ b/src/components/ChatWindow/ChatWindow.css
@@ -60,6 +60,17 @@
     background-image: url('https://user-images.githubusercontent.com/15075759/28719144-86dc0f70-73b1-11e7-911d-60d70fcded21.png');
 }
 
+
+.chatWindow--body::-webkit-scrollbar {
+    width: 6px;
+    height: 6px;
+  }
+  
+  .chatWindow--body::-webkit-scrollbar-thumb {
+    background-color: rgba(0, 0, 0, 0.2);
+    -webkit-border-radius: 1ex;
+    -webkit-box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
+  }
 /*******/
 
 .chatWindow--emojiarea {
